--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".ui.DatingApplication"
+        android:name=".ui.FriendZillaApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DatingApp"
+        android:theme="@style/Theme.FriendZilla"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
 
@@ -26,9 +26,8 @@
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize"
-            android:theme="@style/Theme.DatingApp">
+            android:theme="@style/Theme.FriendZilla">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
