--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             android:name=".ui.MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize"
+            android:launchMode="singleInstance"
             android:theme="@style/Theme.FriendZilla">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
